sim_seq/testcase/111/make_output.log
verilator -cc --exe -x-assign fast -Wall --assert --coverage-line -Wno-WIDTHEXPAND -Wno-BLKSEQ -Wno-VARHIDDEN -Wno-WIDTHTRUNC -Wno-UNUSEDSIGNAL -f input.vc top_module.v sim-main.cpp rfuzz-harness.cpp
- V e r i l a t i o n   R e p o r t: Verilator 5.032 2025-01-01 rev UNKNOWN.REV
- Verilator: Built from 0.000 MB sources in 0 modules, into 0.000 MB in 0 C++ files needing 0.000 MB
- Verilator: Walltime 0.001 s (elab=0.000, cvt=0.000, bld=0.000); cpu 0.001 s on 1 threads
cd obj_dir && make -f Vtop_module.mk
c++  -I.  -MMD -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TIMING=0 -DVM_TRACE=0 -DVM_TRACE_FST=0 -DVM_TRACE_VCD=0 -faligned-new -fbracket-depth=4096 -fcf-protection=none -Qunused-arguments -Wno-bool-operation -Wno-c++11-narrowing -Wno-constant-logical-operand -Wno-non-pod-varargs -Wno-parentheses-equality -Wno-shadow -Wno-sign-compare -Wno-tautological-bitwise-compare -Wno-tautological-compare -Wno-uninitialized -Wno-unused-but-set-parameter -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable     -std=gnu++17 -Os  -c -o rfuzz-harness.o ../rfuzz-harness.cpp
../rfuzz-harness.cpp:13:14: error: no member named 'c' in 'Vtop_module'
   13 |         top->c = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:14:14: error: no member named 'd' in 'Vtop_module'
   14 |         top->d = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:16:18: error: no member named 'mux_in' in 'Vtop_module'
   16 |         if (top->mux_in != 0x8) {
      |             ~~~  ^
../rfuzz-harness.cpp:26:14: error: no member named 'c' in 'Vtop_module'
   26 |         top->c = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:27:14: error: no member named 'd' in 'Vtop_module'
   27 |         top->d = 0x1;
      |         ~~~  ^
../rfuzz-harness.cpp:29:18: error: no member named 'mux_in' in 'Vtop_module'
   29 |         if (top->mux_in != 0x1) {
      |             ~~~  ^
../rfuzz-harness.cpp:39:14: error: no member named 'c' in 'Vtop_module'
   39 |         top->c = 0x1;
      |         ~~~  ^
../rfuzz-harness.cpp:40:14: error: no member named 'd' in 'Vtop_module'
   40 |         top->d = 0x1;
      |         ~~~  ^
../rfuzz-harness.cpp:42:18: error: no member named 'mux_in' in 'Vtop_module'
   42 |         if (top->mux_in != 0xd) {
      |             ~~~  ^
../rfuzz-harness.cpp:52:14: error: no member named 'c' in 'Vtop_module'
   52 |         top->c = 0x1;
      |         ~~~  ^
../rfuzz-harness.cpp:53:14: error: no member named 'd' in 'Vtop_module'
   53 |         top->d = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:55:18: error: no member named 'mux_in' in 'Vtop_module'
   55 |         if (top->mux_in != 0x9) {
      |             ~~~  ^
../rfuzz-harness.cpp:65:14: error: no member named 'c' in 'Vtop_module'
   65 |         top->c = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:66:14: error: no member named 'd' in 'Vtop_module'
   66 |         top->d = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:68:18: error: no member named 'mux_in' in 'Vtop_module'
   68 |         if (top->mux_in != 0x8) {
      |             ~~~  ^
../rfuzz-harness.cpp:71:14: error: no member named 'c' in 'Vtop_module'
   71 |         top->c = 0x0;
      |         ~~~  ^
../rfuzz-harness.cpp:72:14: error: no member named 'd' in 'Vtop_module'
   72 |         top->d = 0x1;
      |         ~~~  ^
../rfuzz-harness.cpp:74:18: error: no member named 'mux_in' in 'Vtop_module'
   74 |         if (top->mux_in != 0x1) {
      |             ~~~  ^
../rfuzz-harness.cpp:77:14: error: no member named 'c' in 'Vtop_module'
   77 |         top->c = 0x1;
      |         ~~~  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make[1]: *** [rfuzz-harness.o] Error 1
make: *** [run] Error 2
